// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Other filenames > should parse 1`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1080,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[银色子弹字幕组][名侦探柯南][第1080集 对准灰原的相机][简繁日多语MKV][1080P]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "银色子弹字幕组",
    "version": undefined,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": undefined,
  "title": "名侦探柯南",
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 2`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[Lilith-Raws] 熊熊勇闖異世界 PUNCH！ / Kuma Kuma Kuma Bear S02 - 02 [Baha][WEB-DL][1080p][AVC AAC][CHT][MP4]",
  },
  "language": "CHT",
  "month": undefined,
  "release": {
    "group": "Lilith-Raws",
    "version": undefined,
  },
  "season": "2",
  "source": "WEB-DL",
  "subtitles": undefined,
  "title": "熊熊勇闖異世界 PUNCH！ / Kuma Kuma Kuma Bear S02",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 3`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 13,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[ANi] 機動戰士鋼彈 水星的魔女 Season 2 - 13 [1080P][Baha][WEB-DL][AAC AVC][CHT][MP4]",
  },
  "language": "CHT",
  "month": undefined,
  "release": {
    "group": "ANi",
    "version": undefined,
  },
  "season": "2",
  "source": "WEB-DL",
  "subtitles": undefined,
  "title": "機動戰士鋼彈 水星的魔女",
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 4`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[爱恋字幕社][4月新番][魔法使的新娘2][Mahoutsukai no Yome S2][01][1080P][MP4][GB][简中]",
  },
  "language": "简中",
  "month": 4,
  "release": {
    "group": "爱恋字幕社",
    "version": undefined,
  },
  "season": "2",
  "source": undefined,
  "subtitles": "GB",
  "title": "魔法使的新娘2",
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 5`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[桜都字幕组] 总之就是非常可爱 S2 / Tonikaku Kawaii S2 [01][1080p][简体内嵌]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "桜都字幕组",
    "version": undefined,
  },
  "season": "2",
  "source": undefined,
  "subtitles": undefined,
  "title": "总之就是非常可爱 S2 / Tonikaku Kawaii S2",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 6`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "【喵萌奶茶屋】★04月新番★[百合是我的工作！/我的百合乃工作是也！/私の百合はお仕事です！/Watashi no Yuri wa Oshigoto desu!][01][720p][繁日雙語][招募翻譯校對]",
  },
  "language": undefined,
  "month": 4,
  "release": {
    "group": "喵萌奶茶屋",
    "version": undefined,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": undefined,
  "title": "百合是我的工作！/我的百合乃工作是也！/私の百合はお仕事です！/Watashi no Yuri wa Oshigoto desu!",
  "type": undefined,
  "video": {
    "resolution": "720p",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 7`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 13,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "【幻樱字幕组】【7月新番】【异世界舅舅 Isekai Ojisan】【13_END】【BIG5_MP4】【1920X1080】",
  },
  "language": undefined,
  "month": 7,
  "release": {
    "group": "幻樱字幕组",
    "version": undefined,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": "BIG5",
  "title": "异世界舅舅 Isekai Ojisan",
  "type": undefined,
  "video": {
    "resolution": "1920X1080",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 8`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 13,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[爱恋字幕社&漫猫字幕社][4月新番][和山田进行LV999 的恋爱][Yamada-kun to Lv999 no Koi wo Suru][13Fin][1080p][MP4][简中]",
  },
  "language": "简中",
  "month": 4,
  "release": {
    "group": "漫猫字幕社",
    "version": undefined,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": undefined,
  "title": "和山田进行LV999 的恋爱",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 9`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": 13,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[爱恋字幕社&漫猫字幕社] 和山田进行LV999 的恋爱/Yamada-kun to Lv999 no Koi wo Suru (01-13Fin WEBRIP 720p AVC AAC MP4 2023年4月 简中)",
  },
  "language": "简中",
  "month": undefined,
  "release": {
    "group": "漫猫字幕社",
    "version": undefined,
  },
  "season": undefined,
  "source": "WEBRIP",
  "subtitles": undefined,
  "title": "和山田进行LV999 的恋爱/Yamada-kun to Lv999 no Koi wo Suru",
  "type": undefined,
  "video": {
    "resolution": "720p",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 10`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": "08FF8DBF",
    "extension": "mp4",
    "name": "[DMG&RoxyLib] 無職転生 [BDRip][1080P][CHS][MP4]/[DMG&RoxyLib] 無職転生 番外編「エリスのゴブリン討伐」[BDRip][AVC_AAC][1080P][CHS](08FF8DBF).mp4",
  },
  "language": "CHS",
  "month": undefined,
  "release": {
    "group": undefined,
    "version": undefined,
  },
  "season": undefined,
  "source": "BDRip",
  "subtitles": undefined,
  "title": "無職転生",
  "type": "番外編",
  "video": {
    "resolution": "1080P",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 11`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "【极影字幕社】★7月新番 白圣女与黑牧师 Shiro Seijo to Kuro Bokushi 第01v2话 GB 1080P MP4（字幕社招人内详）",
  },
  "language": undefined,
  "month": 7,
  "release": {
    "group": "极影字幕社",
    "version": 2,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": "GB",
  "title": "白圣女与黑牧师 Shiro Seijo to Kuro Bokushi",
  "type": undefined,
  "video": {
    "resolution": "1080P",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 12`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[ANi] 無職轉生～到了異世界就拿出真本事 第二季 - 特別篇 [1080P][Baha][WEB-DL][AAC AVC][CHT][V2][MP4]",
  },
  "language": "CHT",
  "month": undefined,
  "release": {
    "group": "ANi",
    "version": 2,
  },
  "season": "2",
  "source": "WEB-DL",
  "subtitles": undefined,
  "title": "無職轉生～到了異世界就拿出真本事 第二季 - 特別篇",
  "type": "特別篇",
  "video": {
    "resolution": "1080P",
    "term": "AVC",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 13`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": 12,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[LoliHouse] 满怀美梦的少年是现实主义者 / Yumemiru Danshi wa Genjitsushugisha [01-12合集][WebRip 1080p HEVC-10bit AAC][简繁内封字幕][Fin]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "满怀美梦的少年是现实主义者 / Yumemiru Danshi wa Genjitsushugisha",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`Other filenames > should parse 14`] = `
{
  "audio": {
    "term": undefined,
  },
  "episode": {
    "number": 1,
    "numberAlt": 12,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": "MP4",
    "name": "[轻之国度字幕组][女友成双/女朋友 and 女朋友][第01-12话][720P][MP4]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "轻之国度字幕组",
    "version": undefined,
  },
  "season": undefined,
  "source": undefined,
  "subtitles": undefined,
  "title": "女友成双/女朋友 and 女朋友",
  "type": undefined,
  "video": {
    "resolution": "720P",
    "term": undefined,
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;
